styles/globals.css
* {
  padding: 0;
  margin: 0;
}

html,
body {
  padding: 0;
  margin: 0;
  width: 100%;
  min-height: 100vh;
  font-family: -apple-system, Poppins, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 16px;
  background-color: black;
}

p,
h1,
h2 {
  margin: 0;
}

